force-app/main/default/objects/Program_Participant__c/Program_Participant__c.object-meta.xml
<CustomObject>
    <label>Program Participant</label>
    <nameField>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Program Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>