force-app/main/default/objects/Program_Participant__c/fields/Actual_Win1__c.field-meta.xml
<CustomField>
    <fullName>Actual_Win1__c</fullName>
    <formula>Program__r.Actual_Win__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Win1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>