force-app/main/default/objects/Program_Participant__c/fields/Actual_Win__c.field-meta.xml
<CustomField>
    <fullName>Actual_Win__c</fullName>
    <label>Actual Win</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>