force-app/main/default/objects/Program_Participant__c/fields/Cash_Turnover1__c.field-meta.xml
<CustomField>
    <fullName>Cash_Turnover1__c</fullName>
    <formula>Program__r.Cash_Turnover__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Turnover1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>