force-app/main/default/objects/Program_Participant__c/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program (Participant)</relationshipLabel>
    <relationshipName>Program_Participant</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>