force-app/main/default/objects/Program_Participant__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <formula>Program__r.Program_Code__c</formula>
    <label>Program Code</label>
    <type>Text</type>
</CustomField>