force-app/main/default/objects/Program_Participant__c/fields/Program_Role__c.field-meta.xml
<CustomField>
    <fullName>Program_Role__c</fullName>
    <label>Program Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Player</fullName>
            </value>
            <value>
                <fullName>Junket Rep</fullName>
            </value>
            <value>
                <fullName>Junket Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>