force-app/main/default/objects/Program_Participant__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <formula>Program__r.Program_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>