force-app/main/default/objects/Program_Participant__c/fields/Theo1__c.field-meta.xml
<CustomField>
    <fullName>Theo1__c</fullName>
    <formula>Program__r.Theo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theo1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>