force-app/main/default/objects/Program_Participant__c/fields/Theo__c.field-meta.xml
<CustomField>
    <fullName>Theo__c</fullName>
    <label>Theo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>